examples/my_example/klee-out-2/test000001.kquery
array a[4] : w32 -> w8 = symbolic
(query [(Eq 0
             (ReadLSB w32 0 a))]
        false)
